# dshield_vector_analysis

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml  local.yaml.example
config/prompts/: cluster_pair_explanation.txt  command_deep_dive.txt  command_enrichment.txt  playbook_disambiguate.txt  playbook_name.txt
console/: README.md  pyproject.toml
console/src/console/: __about__.py  _config.py  _es.py  cli.py  findings.py  graph.py  health.py  intel.py  ioc.py  models.py  queries.py  server.py
console/src/console/web/: artifact_ip.html  artifact_url.html  compare.html  findings.html  health.html  index.html  insights.html
console/src/console/web/css/: app.css
console/src/console/web/js/: app.js  artifact_ip.js  artifact_url.js  compare.js  findings.js  health.js  insights.js
console/src/dshield_console/: __init__.py  _config.py  _es.py  cli.py  graph.py  queries.py  server.py
console/src/dshield_console/web/: index.html  insights.html
console/src/dshield_console/web/css/: app.css
console/src/dshield_console/web/js/: app.js  graph.js  insights.js  timeline.js
es-dashboards/: command-enrichment-dashboard.ndjson  enriched-dshield_cowrie_sessions-dashboard.ndjson  session-analysis.ndjson
es-mappings/: dshield-cowrie-clusters-mapping.json  dshield-cowrie-enrichment-mapping.json
es-mappings/cowrie/: campaigns.json  commands.json  ip_clusters.json  ips.json  session_clusters.json  sessions.json
es-mappings/intel/: ip.json  url.json
es-pipelines/: cowrie-pipeline.yml  webhoneypot-pipeline.yml
scripts/: diagnose_centroid_similarity.py  explain_cluster_pair.py  reindex_intel_index.py  setup-security-onion-node.sh  setup-so-node.sh  vendor_mitre_attack.py  vendor_tldr_pages.py
setup/: destroy.sh  prism.raw.cowrie.session_datastream.yaml  prism.raw_template.yaml  setup.sh
setup/es-pipelines/: cowrie-pipeline.yml
src/dshield_enrich/: cli.py  config.py  es_client.py  triage.py
src/dshield_vector_analysis/: cache.py  cli.py  cluster.py  config.py  enrich.py  es_client.py  (+2 more)
systemd/: dshield_enrich-analytics.service  dshield_enrich-analytics.timer  dshield_enrich-ingest.service  dshield_enrich-ingest.timer  dshield_prism-analytics.service  dshield_prism-analytics.timer  dshield_prism-backward.service  dshield_prism-backward.timer  dshield_prism-forward.service  dshield_prism-forward.timer  dshield_prism-ingest.service  dshield_prism-ingest.timer  dshield_prism-mine-findings.service  dshield_prism-mine-findings.timer  dshield_vector_analysis.service  dshield_vector_analysis.timer  dshield_vector_analysis_cluster.service  dshield_vector_analysis_cluster.timer
(+78 files in other folders)
