[project]
name = "dshield_vector_analysis"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "elasticsearch>=8.11,<9",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Phase 3: clustering / novelty scoring
# Uses sklearn.cluster.HDBSCAN (added in scikit-learn 1.3) — no Cython build needed.
cluster = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.scripts]
dshield_vector_analysis = "dshield_vector_analysis.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
