[project]
name = "dshield_prism"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "elasticsearch>=8.11,<9",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# HDBSCAN clustering / novelty scoring
# Uses sklearn.cluster.HDBSCAN (added in scikit-learn 1.3) — no Cython build needed.
cluster = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.scripts]
dshield_prism = "enrich.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"enrich" = ["data/*.json"]
